--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
     defaultConfig {
-        applicationId "it.egidiocaprino.busyplace"
+        applicationId "it.egidiocaprino.busyplace2"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 6
+        versionName "1.5"
     }
     buildTypes {
         release {
